--- a/assets/tennis-blue-tshirt-card.html
+++ b/assets/tennis-blue-tshirt-card.html
@@ -598,9 +598,9 @@
 <div class="product-container">
   <div class="product-content">
     <div class="product-header">
-      <img src="{{'img_image_826.png'|asset_url}}" alt="Tailored Jacket" class="product-image">
+      <img src="https://cdn.shopify.com/s/files/1/0662/4195/3875/t/4/assets/img_image_826.png?v=82986726114187104371756707101" alt="Tailored Jacket" class="product-image">
       <div class="product-info">
-        <img src="{{'img_group_1000008134.svg'|asset_url}}" alt="Close" class="close-button">
+        <img src="https://cdn.shopify.com/s/files/1/0662/4195/3875/t/4/assets/img_group_1000008134.svg?v=110356064147524365121756707096" alt="Close" class="close-button">
         <div class="product-details">
           <h1 class="product-title">Tennis Blue T-Shirt</h1>
           <p class="product-price">980,00€</p>
@@ -634,7 +634,7 @@
         <div class="dropdown-controls">
           <div class="dropdown-line"></div>
           <img
-            src="{{'img_arrow_down.svg'|asset_url}}"
+            src="https://cdn.shopify.com/s/files/1/0662/4195/3875/t/4/assets/img_arrow_down.svg?v=141419414469500226111756707092"
             alt="toggle"
             class="dropdown-arrow"
             id="sizeArrow"
@@ -653,7 +653,7 @@
 
     <button class="add-to-cart" onclick="addToCart()">
       <span class="cart-text">Add to cart</span>
-      <img src="{{'img_line_15_white_a700.svg'|asset_url}}" alt="Arrow" class="cart-arrow">
+      <img src="https://cdn.shopify.com/s/files/1/0662/4195/3875/t/4/assets/img_line_15_white_a700.svg?v=73367509143898519221756707105" alt="Arrow" class="cart-arrow">
     </button>
   </div>
 </div>
