--- a/assets/tennis-blue-tshirt-card.html
+++ b/assets/tennis-blue-tshirt-card.html
@@ -602,10 +602,10 @@
       <div class="product-info">
         <img src="https://cdn.shopify.com/s/files/1/0662/4195/3875/t/4/assets/img_group_1000008134.svg?v=110356064147524365121756707096" alt="Close" class="close-button">
         <div class="product-details">
-           <h1 class="product-title">{{CARD_TITLE}}</h1>
-          <p class="product-price">{{CARD_PRICE}}</p>
+          <h1 class="product-title">Tennis Blue T-Shirt</h1>
+          <p class="product-price">980,00€</p>
           <p class="product-description">
-{{CARD_DESCRIPTION}}
+            This one-piece swimsuit is crafted from jersey featuring an allover micro Monogram motif in relief.
           </p>
         </div>
       </div>
