--- a/assets/tailored-jacket-card.html
+++ b/assets/tailored-jacket-card.html
@@ -657,6 +657,7 @@
   </div>
 </div>
 <script>
+   window.addToCart = addToCart;
   const dropdown = document.getElementById('sizeDropdown');
   const menu = document.getElementById('sizeMenu');
   const label = document.getElementById('sizeLabel');
