--- a/assets/tennis-blue-tshirt-card.html
+++ b/assets/tennis-blue-tshirt-card.html
@@ -660,6 +660,7 @@
   </div>
 </div>
 <script>
+  window.addToCart = addToCart;
   const dropdown = document.getElementById('sizeDropdown');
   const menu = document.getElementById('sizeMenu');
   const label = document.getElementById('sizeLabel');
